--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "UniForceMusic\\PHPDuckDB\\": "src/"
+            "UniForceMusic\\PHPDuckDBCLI\\": "src/"
         }
     },
     "require": {}
