--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,16 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "UniForceMusic\\PHPDuckDBCLI\\": "src/"
+            "UniForceMusic\\PHPDuckDBCLI\\": "src/",
+            "UniForceMusic\\PHPDuckDBCLI\\Tests\\": "tests/"
         }
     },
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^12.5"
+    },
+    "scripts": {
+        "test": [
+            "./vendor/bin/phpunit ./tests"
+        ]
+    }
 }
